--- a/abstract.tex
+++ b/abstract.tex
@@ -18,11 +18,11 @@
 \vspace*{0.5cm}
 
 \noindent 
-\\ Abstract in Eng
+\\ Making semantic web is not yet common and difficult, making semantic web not yet popular at this time. Whereas, by using semantic web, the information available on the web can be processed directly by computer. Research continues to be done to facilitate the manufacture of semantic web where one of them is zotonic. Zotonic is one of the semantic-based web frameworks. In the previous research has been developed zotonic that can accept ontology as input for the formation of web structure. However, since ontology does not contain business logic, a mechanism for connecting ontology with ABS microservices is required so that business logic on Zotonic can be dynamic based on need. This study discusses how the ontology and web services produced by ABS microservices can be integrated. This is useful in order to create multiple webs on zotonic that have the same structure but have different business logic. The stages of this research is to design the integration that will be done and the implementation of the adaptor used as a liaison between ontology and web services. At the end of this study, a trial is conducted to see the results of the implementation that has been done.
 
 \vspace*{0.2cm}
 
 \noindent Keywords: \\ 
-\noindent one,two,three\\
+\noindent ABS, Adaptor, SPL, Web Service, Zotonic\\
 
 \newpage
