--- a/abstrak.tex
+++ b/abstrak.tex
@@ -18,11 +18,11 @@
 \vspace*{0.5cm}
 
 \noindent 
-\\ Abstrak INA
+\\ Pembuatan web semantik yang belum umum dan susah, menjadikan web semantik belum populer saat ini. Padahal dengan menggunakan web semantik, informasi-informasi yang ada pada web dapat diolah secara langsung oleh komputer. Penelitian terus dilakukan untuk memudahkan pembuatan web semantik dimana salah satunya adalah zotonic. Zotonic merupakan salah satu web \textit{framework} yang berbasis semantik. Pada penelitian sebelumnya telah dikembangkan zotonic yang dapat menerima ontologi sebagai masukan untuk pembentukan struktur webnya. Namun, karena ontologi tidak mengandung \textit{business logic}, maka diperlukan mekanisme untuk menghubungkan ontologi dengan ABS \textit{microservices} agar \textit{business logic} pada Zotonic dapat bersifat dinamis berdasarkan kebutuhkan. Penelitian ini membahas bagaimana ontologi dan \textit{web service} yang dihasilkan oleh ABS \textit{microservices} dapat diintegrasikan. Hal ini berguna agar dapat menciptakan beberapa web pada zotonic yang memiliki struktur yang sama namun memiliki \textit{business logic} yang berbeda. Tahapan dari penelitian ini adalah melakukan rancangan terhadap integrasi yang akan dilakukan dan implementasi \textit{adaptor} yang digunakan sebagai penghubung antara ontologi dan \textit{web services}. Pada akhir penelitian ini, dilakukan ujicoba untuk melihat hasil dari implementasi yang telah dilakukan.
 
 \vspace*{0.2cm}
 
 \noindent Kata Kunci: \\ 
-\noindent ABS, Adaptor, SPL, \textit{Web Service}, Zotonic\\ 
+\noindent ABS, \textit{Adaptor}, SPL, \textit{Web Service}, Zotonic\\ 
 
 \newpage
