--- a/bab6-penutup.tex
+++ b/bab6-penutup.tex
@@ -5,11 +5,11 @@ Pada bab ini, akan dijelaskan kesimpulan yang didapatkan berdasarkan hasil penel
 %---------------------------------------------------------------
 \section{Kesimpulan}
 %---------------------------------------------------------------
-Pengembangan program untuk melakukan integrasi ontologi dan \textit{web services} dapat dilakukan dengan memanfaatkan sebuah \textit{adaptor} yang dibuat pada Zotonic dimana \textit{adaptor} tersebut yang akan menghubungkan keduanya seperti yang dilakukan pada penelitian ini. \textit{Adaptor} tersebut akan membaca file rules.txt sebagai tabel \textit{mapping} untuk proses pemanggilan \textit{web services}. Sehingga perlu terlebih dahulu dilakukan pembuatan file rules.txt agar program ini dapat berjalan. Hasil dari implementasi \textit{adaptor} ini dapat digunakan baik melalui \textit{template engine} maupaun model lainnya.
+Pengembangan program untuk melakukan integrasi ontologi dan \textit{web services} dapat dilakukan dengan memanfaatkan sebuah \textit{adaptor} yang dibuat pada Zotonic dimana \textit{adaptor} tersebut yang akan menghubungkan keduanya seperti yang dilakukan pada penelitian ini. \textit{Adaptor} tersebut akan membaca file rules.txt sebagai tabel \textit{mapping} untuk proses pemanggilan \textit{web services}. Sehingga perlu terlebih dahulu dilakukan pembuatan file rules.txt agar program ini dapat berjalan. Hasil dari implementasi \textit{adaptor} ini dapat digunakan baik melalui \textit{template engine} maupaun model lainnya. \textit{Adaptor} tersebut terdiri dari beberapa fungsi utama seperti fungsi untuk pembacaan tabel \textit{mapping}, pemanggilan \textit{web service} hingga fungsi untuk validasi parameter.
 
-Penggunaan \textit{adaptor} pada \textit{template engine} dapat dimanfaatkan untuk menggantikan pembuatan \textit{business logic} yang masih harus dibuat secara manual pada kode. Hal ini berguna agar \textit{business logic} dapat bersifat lebih dinamis dan dapat disesuaikan dengan kebutuhan. Selain itu, pengguna tidak perlu mengimplementasikan \textit{business logic} lagi karena \textit{adaptor} akan langsung memanggil \textit{web services} hasil dari ABS \textit{microservices} untuk menggantikan \textit{business logic}.
+Penggunaan \textit{adaptor} pada \textit{template engine} dapat dimanfaatkan untuk menggantikan pembuatan \textit{business logic} yang masih harus dibuat secara manual pada kode. Hal ini berguna agar \textit{business logic} dapat bersifat lebih dinamis dan dapat disesuaikan dengan kebutuhan. Selain itu, pengguna tidak perlu mengimplementasikan \textit{business logic} lagi karena \textit{adaptor} akan langsung memanggil \textit{web services} hasil dari ABS \textit{microservices} untuk menggantikan \textit{business logic}. Sehingga dapat dihasilkan beberapa web yang memiliki struktur yang sama tetapi memiliki \textit{business logic} yang berbeda dengan memanfaatkan \textit{ABS microservices}.
 
-Penggunaan \textit{adaptor} pada model lainnya dapat digunakan salah satunya untuk mengirim \textit{resource} dari zotonic ke \textit{web services}.
+Penggunaan \textit{adaptor} pada model lainnya dapat digunakan salah satunya untuk mengirim \textit{resource} dari zotonic ke \textit{web services}. Hal ini bertujuan agar data yang terdapat beberapa \textit{site} zotonic nantinya dapat disimpan pada suatu database eksternal sehingga dapat dilakukan analisis terhadap data-data tersebut. Sehingga berdasarkan hasil penelitian yang telah dilakukan, dapat disimpulkan bahwa integrasi ontologi dan \textit{web service} pada zotonic telah tercapai. Hal ini terbukti melalui studi kasus dimana \textit{adaptor} dimanfaatkan untuk menggantikan peran \textit{business logic} yang harus dibuat secara manual pada kode.
 %---------------------------------------------------------------
 \section{Saran}
 %---------------------------------------------------------------
