--- a/bib.bib
+++ b/bib.bib
@@ -10,6 +10,14 @@
   url = {http://books.google.co.id/books?id=wrZQAAAAMAAJ}
 }
 
+@Book{book.sple,
+	title={Software Product Line Engineering: Foundations, Principles, and Techniques},
+	publisher = {Springer},
+	year = {2005},
+	author = {Klaus Pohl and Günter Böckle and Frank J. van der Linden},
+	isbn = {9783540289012},
+	url = {http://www.springer.com/gp/book/9783540243724}
+}
 
 @book{hopkins_powell_2015,
 	title={A Librarians Guide to Graphs, Data and the Semantic Web}, 
@@ -118,6 +126,13 @@
 	title = {The Pragmatic Web: A Manifesto},
 	publisher = {Communications of The ACM},
 	year = {2006}
+}
+
+@inproceedings{bravyto,
+	author = {Bravyto Takwa Pangukir},
+	title = {Pembentukan Otomatis Aplikasi Berbasis Web dengan Masukan Berupa Ontologi: Studi Kasus Web BSMI},
+	publisher = {Depok: Universitas Indonesia},
+	year = {2016}
 }
 
 @inproceedings{paper.jackson,
